Fix: Corrigiendo cosas