@@ -1,9 +1,11 @@
 package tdunu.MsTitulacion.service.Imp;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
 import tdunu.MsTitulacion.model.entity.ResolucionTitulo;
 import tdunu.MsTitulacion.model.request.ResolucionTituloRequest;
@@ -11,6 +13,7 @@ import tdunu.MsTitulacion.model.response.ResolucionTituloResponse;
 import tdunu.MsTitulacion.repository.ResolucionTituloRepository;
 import tdunu.MsTitulacion.service.ResolucionTituloService;
 
+@Service
 public class ResolucionTituloServiceImp implements ResolucionTituloService{
     
     @Autowired
@@ -24,7 +27,7 @@ public class ResolucionTituloServiceImp implements ResolucionTituloService{
         return resolucionTituloRepository.findAll()
         .stream()
         .map(model -> modelMapper.map(model, ResolucionTituloResponse.class))
-        .toList();
+        .collect(Collectors.toList());
     }
     @Override
     public ResolucionTituloResponse guardar(ResolucionTituloRequest request){
@@ -46,13 +49,13 @@ public class ResolucionTituloServiceImp implements ResolucionTituloService{
         
 
         ResolucionTitulo saved = resolucionTituloRepository.save(modelActual);
-        ResolucionTitulo response = modelMapper.map(saved, ResolucionTituloResponse.class);
-        return response;
+
+        return modelMapper.map(saved, ResolucionTituloResponse.class);
     } //por seaca
 
     @Override
     public void eliminar(int id){
-     
+        resolucionTituloRepository.deleteById(id);
     }
 
 }
